[gd_scene load_steps=3 format=3 uid="uid://br61t04j4g6lw"]

[ext_resource type="Script" uid="uid://djgc0pv6sdd0s" path="res://examples/load_and_download_image/example.gd" id="1_2jas5"]
[ext_resource type="Script" uid="uid://dsgjtbr1s4mdk" path="res://addons/html_5_file_exchange/html_5_file_exchange.gd" id="2_hupni"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2jas5")

[node name="UploadButton" type="Button" parent="."]
layout_mode = 2
offset_right = 64.0
offset_bottom = 31.0
text = "Upload"

[node name="DownloadButton" type="Button" parent="."]
layout_mode = 2
offset_left = 68.0
offset_right = 155.0
offset_bottom = 31.0
text = "Download"

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="WebFileExchange" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_hupni")

[connection signal="pressed" from="UploadButton" to="." method="_on_upload_button_pressed"]
[connection signal="pressed" from="DownloadButton" to="." method="_on_download_button_pressed"]
